<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etFlower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/flower_name"
        android:inputType="text"
        android:autofillHints="name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color" />

    <RadioGroup
        android:id="@+id/rgColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red" />

        <RadioButton
            android:id="@+id/rbWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white" />

        <RadioButton
            android:id="@+id/rbYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price" />

    <RadioGroup
        android:id="@+id/rgPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_low" />

        <RadioButton
            android:id="@+id/rbMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_mid" />

        <RadioButton
            android:id="@+id/rbHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_high" />
    </RadioGroup>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:paddingTop="12dp" />

</LinearLayout>
